[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotoytm"
version = "0.1.0"
authors = [
  { name="Avadhani Jonnavithula", email="avadhanij@outlook.com" },
]
description = "A tool to migrate playlists from Spotify to YouTubeMusic"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/avadhanij/stym"

[project.scripts]
stym = "spotoytm.stym:main"

[tool.black]
line-length = 90